# pwrsvc

./: Cargo.toml
.bin/: install.sh  smx-power-server.socket  smx-power-service.service
src/: main.rs
src/controllers/: mod.rs  pwr_controller.rs
src/interface/: model.rs
src/services/: mod.rs  pwr_service.rs
